# edge-processor-server

./: .env.example  .gitignore  Cargo.toml  Dockerfile  README.md  database_example.json  docker-compose.yml
docs/: Actor.md  Equipment Model Setup.md  database_schema.md  db2.md  db_relationship.mermaid  dolomannaiot_schema.md  features.md  thinking.md
docs/DolomannAIoT/Schema/: asset-service.md
docs/DolomannAIoT/temp/: asset-service.md
src/: device_message.rs  device_message_controller.rs  device_message_handler.rs  device_model.rs  gateway_modbus_device.rs  main.rs  message_handler.rs  message_processor.rs  mqtt_actor.rs
src/message_processor/: message.rs  message_parser.rs  mod.rs  parser.rs  validator.rs
src/message_processor/message_parser/: payload_parser.rs  topic_parser.rs
src/message_processor/message_parser/payload_parser/: channel_payload.rs  data_channel_payload_parser.rs
src/mqtt_client/: mod.rs  rumqtt_client.rs
src/v0/: device_model.rs  gateway_modbus_device.rs  message_handler.rs  mod.rs  mqtt_client.rs
src/v0/actor/: data_actor.rs  db_actor.rs  mod.rs  publish_actor.rs
src/v0/message_processor/: message.rs  mod.rs  parser.rs  parser_benchmark.rs  validator.rs
src/v0/mqtt_client/: rumqtt_client.rs
src/v1/message_processor/: message.rs  parser.rs
src/valhalla/: channel.rs  channel_config.rs  device_message_handler_og.rs
