[package]
name = "dolomann-edge-server"
version = "0.1.0"
edition = "2021"

[dependencies]
rumqttc = "0.24.0"
tokio = { version = "1.43.0", features = ["full"] }
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.137"
queues = "1.1.0"
bytes = "1.9.0"
thiserror = "2.0.11"
actix = "0.13.5"
actix-rt = "2.10.0"
redis = { version = "0.28.2", features = ["tokio-comp"]}
